in onLoginDone(), deal properly with m_account being 0 when creating the cancel sesssion creation message.

BUG: 291964
FIXED-IN: 4.8.1
MERGE: 4.8 (But carefully, since we need to be clever about a new string)